--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body
 	font-family: "Raleway", sans-serif;
 	width: 95%;
 	margin: auto;
-	padding: auto;
 }
 
 /*header logo*/
@@ -52,7 +51,7 @@ body
 	padding-top: 30px;
 }
 
-a:hover
+.hover:hover
 {
 	border-top: 1px #0065fc solid;
 	color: #0065fc;
@@ -87,7 +86,7 @@ a:hover
 	padding-left: 8px;
 	padding-top: 10px;
 	border: 1px #f2f2f2 solid;
-	border-radius: 12px 0px 0px 12px;
+	border-radius: 12px 0 0 12px;
 	color: #000000;
 	margin-top: auto;
 	background-color: #f2f2f2;
@@ -114,7 +113,430 @@ a:hover
 	color: white;
 	font-size: 1.2em;
 	border: 2px #0065fc solid;
-	border-radius: 0px 12px 12px 0px;
+	border-radius: 0 12px 12px 0;
 	background-color: #0065fc;
+}
 
+/*barre des filtres*/
+.filtres
+{
+	display: flex;
+}
+
+.filtres p
+{
+	font-weight: bold;
+	font-size: 1.1em;
+	margin-right: 13px;
+	margin-top: 25px;
+	
+}
+
+.filtres ul
+{
+	display: flex;
+	flex-direction: row;
+	list-style-type: none;
+}
+
+.filtres li
+{
+	font-size: 1.1em;
+	font-weight: bold;
+	border: 1px solid #f2f2f2;
+	border-radius: 10px 30px 30px 10px;
+	height: 36px;
+	padding-top: 12px;
+	padding-right: 22px;
+	padding-left: 12px;
+	margin-right: 35px;
+	margin-left: 22px;
+}
+
+.filtres li i
+{
+	color: #0065fc;
+	border: 1px solid #deebff;
+	border-radius: 50%;
+	width: 40px;
+	height: 30px;
+	text-align: center;
+	padding-top: 14px;
+	margin-top: -20px;
+	margin-right: 15px;
+	background-color: #deebff;
+	margin-left: -35px;
+	padding-left: 8px;
+	padding-right: 8px;
+	padding-bottom: 4px;
+}
+
+/*le point info*/
+.info
+{
+	display: flex;
+	align-items: flex-end;
+	font-size: 1.1em;
+}
+
+.info i
+{
+	font-size: 0.8em;
+	border: 1px solid #f2f2f2;
+	border-radius: 50%;
+	padding: 4px 9px 4px 9px;
+	margin-right: 10px;
+	color: #0065fc;
+}
+
+/*section hebergement*/
+.section1
+{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	margin-top: 45px;
+}
+#hebergements
+{
+	width: auto;
+	background-color:#f2f2f2;
+	border-radius: 15px;
+	margin-right: 17px;
+	margin-left: -40px;
+	padding: 17px;
+}
+
+#hebergements h2
+{
+	font-size: 1.5em;
+	margin-left: 15px;
+	margin-bottom: 5px;
+	margin-top: 15px;
+}
+.soleil{
+	text-decoration: none;
+}
+
+.auberge
+{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	grid-column-gap: 35px;
+	grid-row-gap: 10px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.auberge img
+{
+	width: 265px;
+	height: 115px;
+	border: 3px solid white;
+	border-radius: 12px 12px 0 0;
+	
+}
+
+.auberge figure
+{
+	border: 3px solid white;
+	border-radius: 12px;
+	background-color: white;
+	margin: 17px;
+	margin-right: auto;	
+	margin-left: auto;	
+	
+}
+
+.auberge strong
+{
+	margin-left: 10px;
+	color: black;
+	font-size: 1.1em;
+	text-decoration: none;	
+}
+
+.auberge p
+{
+	margin-left: 10px;
+	color: black;
+}
+
+.auberge a
+{
+	text-decoration: none;
+}
+
+.fas
+{
+	color: #0065fc
+}
+
+.afficher a
+{
+	text-decoration: none;
+	color: black;
+	margin-left: 34px;
+}
+
+.afficher p
+{
+	text-decoration: none;
+	font-weight: bold;
+	margin-top: 25px;
+	font-size: 1.1em;
+}
+
+/*article les plus populaires*/
+#populaires
+{
+	background-color: #f2f2f2;
+	border-radius: 15px;
+	width: 480px;
+	
+}
+
+.plus
+{
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+	font-size: 1.1em;
+	margin-left: 38px;
+	margin-top: 10px;
+	margin-right: 34px;
+}
+
+#finance
+{
+	color: black;
+}
+
+#populaires img
+{
+	width: 160px;
+	height: 160px;
+	border-radius: 12px;
+	margin-top: -10px;
+	margin-bottom: -10px;
+}
+
+.hotel
+{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	border: 4px solid white;
+	background-color: white;
+	border-radius: 12px;
+	margin-top: 5px;
+	padding-top: 10px;
+	vertical-align: middle;
+	margin-bottom: 35px;
+}
+
+.soleil
+{
+	text-align: left;
+	width: 180px;
+	height: 150px;
+	text-decoration: none;
+}
+
+.soleil figcaption 
+{
+	margin-left: -30px;
+}
+
+.soleil strong
+{
+	color: black;
+	font-size: 1.1em;
+	text-decoration: none;
+}
+
+.soleil i
+{
+	text-decoration: none;
+	margin-top: 25px;
+}
+
+a
+{
+	text-decoration: none;
+}
+
+.soleil p
+{
+	color: black;
+	text-decoration: none;
+}
+
+#star, #star1, #star2, #star3, #star4, #star5, #star6
+{
+	color: #f2f2f2;	
+}
+
+/*activités à marseille*/
+.section2 h2
+{
+	font-size: 1.5em;
+	margin-top: 45px;
+	margin-left: 5px;
+	margin-bottom: 40px;
+}
+
+.activites
+{
+	width:auto;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: 34% 34%;
+	margin-left: auto;
+	column-gap: 31px;
+	margin-top: -20px;
+}
+#vieux
+{
+	grid-column: 1 ;
+	grid-row: 1 / span 2;
+	height: 400px;
+	width: 343px;
+	border: 1px solid #f2f2f2;
+	border-radius: 12px;
+	margin-right: 10px;
+	
+}
+#fort
+{
+	grid-column: 2;
+	grid-row: 1;
+	border: 1px solid #f2f2f2;
+	width: 343px;
+	height: 210px;
+	margin-right: 10px;
+	border-radius: 12px;
+}
+#frioul
+{
+	grid-column: 2;
+	grid-row: 2;
+	border: 1px solid #f2f2f2;
+	height: 153px;
+	width: 343px;
+	margin-right: 10px;
+	border-radius: 12px;
+	margin-top: 62px;
+}
+#parc
+{
+	grid-column: 3;
+	grid-row: 1 / span 2;
+	height: 400px;
+	width: 343px;
+	border: 1px solid #f2f2f2;
+	margin-right: 10px;
+	border-radius: 12px;
+}
+#dame
+{
+	grid-column: 4;
+	grid-row: 1;
+	border: 1px solid #f2f2f2;
+	height: 180px;
+	width: 343px;
+	border-radius: 12px;
+}
+#longchamp
+{
+	grid-column: 4;
+	grid-row: 2;
+	border: 1px solid #f2f2f2;
+	height: 180px;
+	width: 343px;
+	border-radius: 12px;
+	margin-top: 37px;
+}
+#vieux img
+{
+	height: 350px;
+	width: 343px;
+	border-radius: 12px 12px 0 0;
+	margin-bottom: 10px;
+	margin-left: -40px;
+	margin-top: -17px;
+}
+#parc img
+{
+	height: 350px;
+	width: 343px;
+	border-radius: 12px 12px 0 0;
+	margin-bottom: 10px;
+	margin-left: -40px;
+	margin-top: -17px;
+}
+#dame img
+{
+	height: 132px;
+	width: 343px;
+	border-radius: 12px 12px 0 0;
+	margin-bottom: 10px;
+	margin-left: -40px;
+	margin-top: -17px;
+}
+#longchamp img
+{
+	height: 132px;
+	width: 343px;
+	border-radius: 12px 12px 0 0;
+	margin-bottom: 10px;
+	margin-left: -40px;
+	margin-top: -17px;
+}
+#fort img
+{
+	height: 165px;
+	width: 343px;
+	border-radius: 12px 12px 0 0;
+	margin-bottom: 10px;
+	margin-left: -40px;
+	margin-top: -17px;
+}
+#frioul img
+{
+	height: 105px;
+	width: 343px;
+	border-radius: 12px 12px 0 0;
+	margin-left: -40px;
+	margin-top: -17px;
+	margin-bottom: 10px;
+}
+.activites a
+{
+	text-decoration: none;
+}
+.activites strong
+{
+	color: black;
+	padding-left: 15px;
+}
+
+/*footer*/
+footer
+{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	background-color: #f2f2f2;
+	margin-right: -30px;
+	margin-left: -30px;
+	margin-bottom: 10px;
+	margin-top: -90px;
+}
+ul
+{
+	list-style-type: none;
+}
+footer ul li
+{
+	padding-bottom: 10px;
 }
