--- a/style.css
+++ b/style.css
@@ -135,40 +135,43 @@ body
 .filtres ul
 {
 	display: flex;
-	flex-direction: row;
+	flex-wrap: wrap;
+
 	list-style-type: none;
+	padding: 0;
 }
 
 .filtres li
 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-size: 1.1em;
 	font-weight: bold;
-	border: 1px solid #f2f2f2;
+	/*border: 1px solid #f2f2f2;
 	border-radius: 10px 30px 30px 10px;
 	height: 36px;
 	padding-top: 12px;
 	padding-right: 22px;
-	padding-left: 12px;
+	padding-left: 12px;*/
 	margin-right: 35px;
 	margin-left: 22px;
 }
 
 .filtres li i
 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: #0065fc;
 	border: 1px solid #deebff;
 	border-radius: 50%;
-	width: 40px;
-	height: 30px;
-	text-align: center;
-	padding-top: 14px;
-	margin-top: -20px;
-	margin-right: 15px;
+	width: 50px;
+	height: 50px;
 	background-color: #deebff;
-	margin-left: -35px;
-	padding-left: 8px;
-	padding-right: 8px;
-	padding-bottom: 4px;
+	margin-right: 10px;
+	
+	
 }
 
 /*le point info*/
