--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body
 }
 
 /*header logo*/
-#conteneur
+.conteneur
 {
 	display: flex;
 	justify-content: space-between;
@@ -44,21 +44,31 @@ body
 	font-size: 1.1em;
 }
 
-.menu a
+.hover
 {
 	color: #000000;
 	text-decoration: none;
+	padding-top: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-top: 1px solid transparent;
+}
+
+.inscrire
+{
+	font-weight: bold;
+	color: #0065fc;
 	padding-top: 30px;
 }
 
 .hover:hover
 {
-	border-top: 1px #0065fc solid;
 	color: #0065fc;
+	border-top: 1px solid #0065fc;
 }
 
 /*titre et recherche*/
-#recherche h2
+.recherche h2
 {
 	font-size: 1.5em;
 }
@@ -94,9 +104,9 @@ body
 
 .textarea
 {
-	width: 240px;
+	width: 230px;
 	height: 40px;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	font-weight: bold;
 	border-left: none;
 	border-right: none;
@@ -107,7 +117,7 @@ body
 
 .button
 {
-	width: 150px;
+	width: 155px;
 	height: 43px;
 	margin-left: -5px;
 	color: white;
@@ -127,16 +137,14 @@ body
 {
 	font-weight: bold;
 	font-size: 1.1em;
-	margin-right: 13px;
-	margin-top: 25px;
-	
+	margin-right: 25px;
+	margin-top: 33px;	
 }
 
 .filtres ul
 {
 	display: flex;
 	flex-wrap: wrap;
-
 	list-style-type: none;
 	padding: 0;
 }
@@ -146,15 +154,16 @@ body
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	font-weight: bold;
-	/*border: 1px solid #f2f2f2;
-	border-radius: 10px 30px 30px 10px;
-	height: 36px;
+	border: 1px solid #f2f2f2;
+	border-radius: 30px 30px 30px 30px;
+	padding-right: 15px;
+	/*height: 36px;
 	padding-top: 12px;
 	padding-right: 22px;
 	padding-left: 12px;*/
-	margin-right: 35px;
+	margin-right: 30px;
 	margin-left: 22px;
 }
 
@@ -200,17 +209,17 @@ body
 	flex-direction: row;
 	margin-top: 45px;
 }
-#hebergements
+
+.hebergements 
 {
 	width: auto;
 	background-color:#f2f2f2;
 	border-radius: 15px;
 	margin-right: 17px;
-	margin-left: -40px;
 	padding: 17px;
 }
 
-#hebergements h2
+.hebergements h2
 {
 	font-size: 1.5em;
 	margin-left: 15px;
@@ -292,7 +301,7 @@ body
 }
 
 /*article les plus populaires*/
-#populaires
+.populaires
 {
 	background-color: #f2f2f2;
 	border-radius: 15px;
@@ -316,7 +325,7 @@ body
 	color: black;
 }
 
-#populaires img
+.populaires img
 {
 	width: 160px;
 	height: 160px;
@@ -399,7 +408,7 @@ a
 	column-gap: 31px;
 	margin-top: -20px;
 }
-#vieux
+.vieux
 {
 	grid-column: 1 ;
 	grid-row: 1 / span 2;
@@ -410,17 +419,17 @@ a
 	margin-right: 10px;
 	
 }
-#fort
+.fort
 {
 	grid-column: 2;
 	grid-row: 1;
 	border: 1px solid #f2f2f2;
 	width: 343px;
-	height: 210px;
+	height: 205px;
 	margin-right: 10px;
 	border-radius: 12px;
 }
-#frioul
+.frioul
 {
 	grid-column: 2;
 	grid-row: 2;
@@ -429,9 +438,9 @@ a
 	width: 343px;
 	margin-right: 10px;
 	border-radius: 12px;
-	margin-top: 62px;
+	margin-top: 92px;
 }
-#parc
+.parc
 {
 	grid-column: 3;
 	grid-row: 1 / span 2;
@@ -441,7 +450,7 @@ a
 	margin-right: 10px;
 	border-radius: 12px;
 }
-#dame
+.dame
 {
 	grid-column: 4;
 	grid-row: 1;
@@ -450,7 +459,7 @@ a
 	width: 343px;
 	border-radius: 12px;
 }
-#longchamp
+.longchamp
 {
 	grid-column: 4;
 	grid-row: 2;
@@ -458,9 +467,9 @@ a
 	height: 180px;
 	width: 343px;
 	border-radius: 12px;
-	margin-top: 37px;
+	margin-top: 65px;
 }
-#vieux img
+.vieux img
 {
 	height: 350px;
 	width: 343px;
@@ -469,7 +478,7 @@ a
 	margin-left: -40px;
 	margin-top: -17px;
 }
-#parc img
+.parc img
 {
 	height: 350px;
 	width: 343px;
@@ -478,7 +487,7 @@ a
 	margin-left: -40px;
 	margin-top: -17px;
 }
-#dame img
+.dame img
 {
 	height: 132px;
 	width: 343px;
@@ -487,7 +496,7 @@ a
 	margin-left: -40px;
 	margin-top: -17px;
 }
-#longchamp img
+.longchamp img
 {
 	height: 132px;
 	width: 343px;
@@ -496,7 +505,7 @@ a
 	margin-left: -40px;
 	margin-top: -17px;
 }
-#fort img
+.fort img
 {
 	height: 165px;
 	width: 343px;
@@ -505,7 +514,7 @@ a
 	margin-left: -40px;
 	margin-top: -17px;
 }
-#frioul img
+.frioul img
 {
 	height: 105px;
 	width: 343px;
@@ -533,7 +542,7 @@ footer
 	margin-right: -30px;
 	margin-left: -30px;
 	margin-bottom: 10px;
-	margin-top: -90px;
+	margin-top: 20px;
 }
 ul
 {
