--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ header
 	padding: 6px;
 	padding-left: 8px;
 	padding-top: 10px;
-	border: 1px #f2f2f2 solid;
+	border: 1px transparent solid;
 	border-radius: 12px 0 0 12px;
 	color: #000000;
 	margin-top: auto;
@@ -123,9 +123,10 @@ header
 	margin-left: -5px;
 	color: white;
 	font-size: 1.2em;
-	border: 2px #0065fc solid;
+	border: 2px transparent solid;
 	border-radius: 0 12px 12px 0;
 	background-color: #0065fc;
+	text-align: initial;
 }
 
 /*barre des filtres*/
@@ -174,7 +175,7 @@ header
 	justify-content: center;
 	align-items: center;
 	color: #0065fc;
-	border: 1px solid #deebff;
+	border: 1px solid transparent;
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
@@ -253,7 +254,7 @@ header
 
 .auberge figure
 {
-	border: 3px solid white;
+	border: 3px solid transparent;
 	border-radius: 12px;
 	background-color: white;
 	margin: 17px;
@@ -339,7 +340,7 @@ header
 {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	border: 4px solid white;
+	border: 4px solid transparent;
 	background-color: white;
 	border-radius: 12px;
 	margin-top: 5px;
@@ -556,7 +557,7 @@ footer ul li
 
 /*responsive media queries*/
 
-@media all and (max-width: 418px)
+@media all and (max-width: 480px)
 {
 body
 {
@@ -635,6 +636,7 @@ form
 {
 	width: 50px;
 	border-radius: 12px;
+	text-align: center;
 }
 span 
 {
@@ -659,12 +661,15 @@ span
 .filtres ul 
 {
 	position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 .responsive 
 {
 	position: absolute;
 	width: auto;
-	right: -21px;
+	right: -170px;
 }
 .filtres li 
 {   
@@ -776,5 +781,158 @@ footer
 	margin: 0;
 	margin-top: 70px;
 	padding-top: 30px;
+}
+}
+
+/*media queries tablettes*/
+
+@media all and (min-width: 481px) and (max-width: 1024px)
+{
+.button
+{
+	width: auto;
+}
+.button i 
+{
+	display: none;
+}
+.filtres li 
+{
+	margin-bottom: 10px;
+}
+.section1
+{
+	display: grid;
+	grid-template-columns: 1fr;
+}
+.hebergements
+{
+	margin: 0;
+}
+.hebergements h2 
+{
+	margin: 0;
+}
+.auberge
+{
+	width: 100%;
+    display: grid;
+	grid-template-columns: 1fr 1fr;	
+	padding: 0;
+}
+.auberge a 
+{
+	width: 100%;
+}
+
+.auberge figcaption figure 
+{
+	width: auto;
+}
+.auberge img 
+{
+	width: 98%;
+}
+.populaires 
+{
+	width: auto;
+    display: flex;
+    flex-direction: column;
+	margin-top: 50px;
+	padding: 17px;
+	padding-right: 24px;
+}
+.plus
+{
+	margin: 0;
+}
+.populaires a 
+{
+	margin-bottom: 45px;
+}
+.populaires figure 
+{
+	width: 100%;
+	margin: 0;
+    padding: 0;
+}
+.populaires figcaption 
+{
+	width: auto;
+    margin: 0;
+    padding-left: 20px;
+}
+.populaires img 
+{
+	width: 100%;
+	padding: 10px 0 10px 0 ;
+}
+.section2
+{
+	width: 100%;
+}	
+.activites
+{
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: 400px 400px;
+	grid-row-gap: 45px;
+	grid-column-gap: 20px;
+}
+.activites a 
+{
+	width: auto;
+}
+.activites figure
+{
+	margin: 0;
+}
+.activites figcaption 
+{
+	margin: auto;
+}
+.activites img 
+{
+	width: 100%;
+	margin: auto;
+}
+.parc
+{
+	grid-column: 1;
+	grid-row: 2;
+}
+.fort
+{
+	margin-right: 20px;
+}
+.frioul
+{
+	grid-column: 2;
+	grid-row: 1;
+	margin-top: 247px;
+	margin-right: 20px;
+}
+.dame
+{
+	grid-column: 2;
+	grid-row: 2;
+	margin-right: 20px;
+}
+.longchamp
+{
+	grid-column: 2;
+	grid-row: 2;
+	margin-top: 220px;
+	margin-right: 20px;
+}
+footer 
+{
+	width: 100%;
+    margin-left: 0px;
+}
+footer ul 
+{
+	width: auto;
+	margin-left: -20px;
 }
 }
