--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
  	 src:url("fonts/Raleway-VariableFont_wght");
 
 }
-
 /*corps de page*/
 body
 {
@@ -13,7 +12,6 @@ body
 	width: 95%;
 	margin: auto;
 }
-
 /*header logo*/
 header
 {
@@ -21,20 +19,17 @@ header
 	justify-content: space-between;
 	align-items: flex-end;
 }
-
 #logo img
 {
 	width: 106px;
 	height: 60px;
 }
-
 /*menu*/
 .menu ul
 {
 	display: flex;
 	list-style-type: none;
 }
-
 .menu li
 {
 	display: flex;
@@ -43,7 +38,6 @@ header
 	margin-right: 50px;
 	font-size: 1.1em;
 }
-
 .hover
 {
 	color: #000000;
@@ -54,39 +48,33 @@ header
 	border-top: 1px solid transparent;
 	transition: 0.5s ease;
 }
-
 .inscrire
 {
 	font-weight: bold;
 	color: #0065fc;
 	padding-top: 30px;
 }
-
 .hover:hover
 {
 	color: #0065fc;
 	border-top: 1px solid #0065fc;
 }
-
 /*titre et recherche*/
 .recherche h2
 {
-	font-size: 1.5em;
+	font-size: 1.4em;
 }
-
 .titre
 {
 	font-size: 1.1em;
 	margin-top: -10px;
 }
-
 .searchbar
 {
 	display: flex;
 	justify-content: flex-start;
 	text-decoration: none;
 }
-
 .marker
 {
 	width: 40px;
@@ -102,10 +90,9 @@ header
 	margin-top: auto;
 	background-color: #f2f2f2;
 }
-
 .textarea
 {
-	width: 230px;
+	width: 233px;
 	height: 40px;
 	font-size: 1.2em;
 	font-weight: bold;
@@ -115,26 +102,25 @@ header
 	border-top: 1px #f2f2f2 solid;
 	padding-left: 16px;
 }
-
 .button
 {
-	width: 155px;
-	height: 43px;
-	margin-left: -5px;
-	color: white;
-	font-size: 1.2em;
-	border: 2px transparent solid;
-	border-radius: 0 12px 12px 0;
+	width: 130px;
+    height: 43px;
+    color: white;
+    font-size: 1.2em;
+    border: 2px transparent solid;
+    border-radius: 0 12px 12px 0;
 	background-color: #0065fc;
-	text-align: initial;
 }
-
+.button i
+{
+	display: none;
+}
 /*barre des filtres*/
 .filtres
 {
 	display: flex;
 }
-
 .filtres p
 {
 	font-weight: bold;
@@ -142,7 +128,6 @@ header
 	margin-right: 25px;
 	margin-top: 33px;	
 }
-
 .filtres ul
 {
 	display: flex;
@@ -154,7 +139,6 @@ header
 {
 	display: flex;
 }
-
 .filtres li
 {
 	display: flex;
@@ -168,7 +152,6 @@ header
 	margin-right: 30px;
 	margin-left: 22px;
 }
-
 .filtres li i
 {
 	display: flex;
@@ -180,11 +163,8 @@ header
 	width: 50px;
 	height: 50px;
 	background-color: #deebff;
-	margin-right: 10px;
-	
-	
+	margin-right: 10px;		
 }
-
 /*le point info*/
 .info
 {
@@ -192,7 +172,6 @@ header
 	align-items: flex-end;
 	font-size: 1.1em;
 }
-
 .info i
 {
 	font-size: 0.8em;
@@ -202,7 +181,6 @@ header
 	margin-right: 10px;
 	color: #0065fc;
 }
-
 /*section hebergement*/
 .section1
 {
@@ -211,7 +189,6 @@ header
 	flex-direction: row;
 	margin-top: 45px;
 }
-
 .hebergements 
 {
 	width: auto;
@@ -220,7 +197,6 @@ header
 	margin-right: 17px;
 	padding: 17px;
 }
-
 .hebergements h2
 {
 	font-size: 1.5em;
@@ -228,10 +204,10 @@ header
 	margin-bottom: 5px;
 	margin-top: 15px;
 }
-.soleil{
+.soleil
+{
 	text-decoration: none;
 }
-
 .auberge
 {
 	display: grid;
@@ -242,16 +218,13 @@ header
 	padding-left: 15px;
 	padding-right: 15px;
 }
-
 .auberge img
 {
 	width: 265px;
 	height: 115px;
 	border: 3px solid white;
-	border-radius: 12px 12px 0 0;
-	
+	border-radius: 12px 12px 0 0;	
 }
-
 .auberge figure
 {
 	border: 3px solid transparent;
@@ -259,10 +232,8 @@ header
 	background-color: white;
 	margin: 17px;
 	margin-right: auto;	
-	margin-left: auto;	
-	
+	margin-left: auto;		
 }
-
 .auberge strong
 {
 	margin-left: 10px;
@@ -270,30 +241,25 @@ header
 	font-size: 1.1em;
 	text-decoration: none;	
 }
-
 .auberge p
 {
 	margin-left: 10px;
 	color: black;
 }
-
 .auberge a
 {
 	text-decoration: none;
 }
-
 .fas
 {
 	color: #0065fc
 }
-
 .afficher a
 {
 	text-decoration: none;
 	color: black;
 	margin-left: 34px;
 }
-
 .afficher p
 {
 	text-decoration: none;
@@ -301,16 +267,13 @@ header
 	margin-top: 25px;
 	font-size: 1.1em;
 }
-
 /*article les plus populaires*/
 .populaires
 {
 	background-color: #f2f2f2;
 	border-radius: 15px;
-	width: 480px;
-	
+	width: 480px;	
 }
-
 .plus
 {
 	display: flex;
@@ -321,12 +284,10 @@ header
 	margin-top: 10px;
 	margin-right: 34px;
 }
-
 #finance
 {
 	color: black;
 }
-
 .populaires img
 {
 	width: 160px;
@@ -335,7 +296,6 @@ header
 	margin-top: -10px;
 	margin-bottom: -10px;
 }
-
 .hotel
 {
 	display: grid;
@@ -348,7 +308,6 @@ header
 	vertical-align: middle;
 	margin-bottom: 35px;
 }
-
 .soleil
 {
 	text-align: left;
@@ -356,41 +315,34 @@ header
 	height: 150px;
 	text-decoration: none;
 }
-
 .soleil figcaption 
 {
 	margin-left: -30px;
 }
-
 .soleil strong
 {
 	color: black;
 	font-size: 1.1em;
 	text-decoration: none;
 }
-
 .soleil i
 {
 	text-decoration: none;
 	margin-top: 25px;
 }
-
 a
 {
 	text-decoration: none;
 }
-
 .soleil p
 {
 	color: black;
 	text-decoration: none;
 }
-
 #star, #star1, #star2, #star3, #star4, #star5, #star6
 {
 	color: #f2f2f2;	
 }
-
 /*activités à marseille*/
 .section2 h2
 {
@@ -399,10 +351,9 @@ a
 	margin-left: 5px;
 	margin-bottom: 40px;
 }
-
 .activites
 {
-	height: 400px;
+	height: auto;
 	width:auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
@@ -419,8 +370,7 @@ a
 	width: 343px;
 	border: 1px solid #f2f2f2;
 	border-radius: 12px;
-	margin-right: 10px;
-	
+	margin-right: 10px;	
 }
 .fort
 {
@@ -535,7 +485,6 @@ a
 	color: black;
 	padding-left: 15px;
 }
-
 /*footer*/
 footer
 {
@@ -545,7 +494,11 @@ footer
 	margin-right: -30px;
 	margin-left: -30px;
 	margin-bottom: 10px;
-	margin-top: 20px;
+	margin-top: 45px;
+}
+footer ul
+{
+	margin-top: 35px;
 }
 ul
 {
@@ -557,42 +510,34 @@ footer ul li
 }
 
 /*responsive media queries*/
-
 @media all and (max-width: 480px)
 {
 body
 {
-	width: auto;
+	width: 100%;
 }
 header
 {
-	width: auto;
-	position: relative;
-	flex-direction: column;
-	align-items: flex-start;
+	width: 100%;
 }
 #logo
 {
-	margin-top: 50px;
 	margin-left: 30px;
-}
-.menu
-{
-	width: 100%;
-	margin-left: 15px;
-	
 }
 .menu ul 
 {
+	width: 100%;
 	padding: 0;
-	margin: auto;
+	margin: 0;
+	margin-top: 20px;
 }
 .menu li 
 {
 	margin: 0;
-	justify-content: center;
-	width: 50%;
-	text-align: center;
+    justify-content: flex-end;
+    width: 50%;
+    text-align: center;
+	margin-top: 10px;
 }
 .hover
 {
@@ -609,23 +554,27 @@ header
 .inscrire
 {
 	position: absolute;
-	margin: 0;
-	padding: 0;
-	top: 80px;
-	right: -50px;
+    top: 0px;
+    right: 25px;
 }
 .recherche
 {
+	width: 100%;
 	margin-left: 30px;
-	margin-right: 12px;
+	margin-right: 30px;
 }
 .recherche h2 
 {
-	font-size: 1.8em;
+	width: 80%;
+	font-size: 1.7em;
 }
 .titre
 {
-	font-size: 1.3em;
+	font-size: 1.25em;
+}
+.searchbar
+{
+	width: 100%;
 }
 form
 {
@@ -638,13 +587,13 @@ form
 }
 .textarea
 {
-	width: 288px;
+	width: 270px;
     padding-left: 17px;
     font-size: 1.5em;
 }
 .button
 {
-	width: 50px;
+	width: 55px;
 	border-radius: 12px;
 	text-align: center;
 }
@@ -654,8 +603,8 @@ span
 }
 .button i
 {
-	width: auto;
-	color: white;
+	display: block;
+	color: white;	
 }
 .filtres
 {
@@ -669,36 +618,35 @@ span
 	width: auto;
 }
 .filtres ul 
-{
-	position: relative;
+{	
     display: flex;
-    flex-direction: column;
-    align-items: self-start;
+    flex-wrap: wrap;
 }
 .responsive 
 {
-	position: absolute;
-	width: auto;
-	right: -150px;
+	display: flex;
 }
 .filtres li 
-{   
-	margin-right: 22px;
+{   	
     margin-top: 22px;
     margin-left: 0px;
 }
+.info
+{
+	width: 93%;
+	font-size: 1.25em;
+}
 .info i 
 {
-	margin-right: 4px;
-    margin-bottom: 20px;
+    margin-bottom: 23px;
 }
-
 /*hebergements et populaires*/
 .section1
 {
-	display: grid;
-	grid-template-columns: 1fr;
-	width: auto;
+	display: flex;
+	flex-direction: column-reverse;
+	width: 100%;
+	margin: 0;
 }
 .populaires
 {
@@ -710,12 +658,11 @@ span
 .populaires a figure
 {
 	width: auto;
-	margin-left: 30px;
-    margin-bottom: 20px;
 }
-/*hebergements*/
 .hebergements
 {
+	display: flex;
+	flex-direction: column;
 	background-color: unset;
 }
 .hebergements h2 
@@ -723,16 +670,16 @@ span
 	margin-top: 20px;
     margin-bottom: auto;
 }
-.plus h2 
-{
-	margin-bottom: 10px;
-}
 .auberge
 {
 	display: flex;
 	flex-direction: column;
 }
-.auberge  a figure
+.auberge a 
+{
+	width: auto;
+}
+.auberge figure
 {
 	width: auto;
 	box-shadow: 0px 2px 5px 2px grey;
@@ -746,8 +693,6 @@ span
 {
 	margin-left: -20px;
 }
-
-/*activités*/
 .section2
 {
 	width: 100%;
@@ -761,13 +706,12 @@ span
 {
 	display: flex;
 	flex-direction: column;
-
 }	
 .activites a  
 {
 	width: 85%;
 	height: 235px;
-	margin: 30px;
+	margin: 17px;
 	margin-bottom: 0px;
 	box-shadow: 0px 2px 5px 2px grey;
 }
@@ -782,7 +726,6 @@ span
 {
 	margin: 0;
 }
-
 footer 
 {
 	width: 100%;
@@ -792,19 +735,33 @@ footer
 	margin-top: 70px;
 	padding-top: 30px;
 }
+footer ul 
+{
+	width: 100%;
 }
-
+}
 /*media queries tablettes*/
-
-@media all and (min-width: 481px) and (max-width: 1024px)
+@media all and (max-width: 1024px)
 {
-.button
+header
 {
-	width: auto;
+	position: relative;
 }
-.button i 
+#logo
 {
-	display: none;
+	position: absolute;
+	top: 10px;
+}
+.menu
+{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin-top: 35px;
+}
+.searchbar
+{
+	width: 100%;
 }
 .filtres li 
 {
@@ -813,7 +770,6 @@ footer
 .section1
 {
 	display: grid;
-	grid-template-columns: 1fr;
 }
 .hebergements
 {
@@ -826,7 +782,6 @@ footer
 .auberge
 {
 	width: 100%;
-    display: grid;
 	grid-template-columns: 1fr 1fr;	
 	padding: 0;
 }
@@ -834,7 +789,6 @@ footer
 {
 	width: 100%;
 }
-
 .auberge figcaption figure 
 {
 	width: auto;
@@ -883,7 +837,6 @@ footer
 }	
 .activites
 {
-	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-template-rows: 400px 400px;
 	grid-row-gap: 45px;
@@ -943,6 +896,10 @@ footer
 footer ul 
 {
 	width: auto;
-	margin-left: -20px;
+
+}
+footer li 
+{
+	padding: 0;
 }
 }
