--- a/style.css
+++ b/style.css
@@ -559,10 +559,7 @@ header
 }
 .recherche
 {
-	width: auto;
 	padding-left: 30px;
-	/*margin-left: 30px;
-	margin-right: 30px;*/
 }
 .recherche h2 
 {
@@ -575,7 +572,7 @@ header
 }
 .searchbar
 {
-	width: 100%;
+	width: 92%;
 }
 form
 {
@@ -588,15 +585,13 @@ form
 }
 .textarea
 {
-	width: 270px;
-    padding-left: 17px;
+	width: 100%;
     font-size: 1.5em;
 }
 .button
 {
 	width: 55px;
 	border-radius: 12px;
-	text-align: center;
 }
 span 
 {
@@ -616,16 +611,6 @@ span
 {
 	position: absolute;
 	margin: 0;
-	width: auto;
-}
-.filtres ul 
-{	
-    display: flex;
-    flex-wrap: wrap;
-}
-.responsive 
-{
-	display: flex;
 }
 .filtres li 
 {   	
@@ -634,7 +619,6 @@ span
 }
 .info
 {
-	width: 93%;
 	font-size: 1.25em;
 }
 .info i 
@@ -651,57 +635,38 @@ span
 }
 .populaires
 {
-	width: 100%;
 	grid-row: 1;
 	border-radius: unset;
-	padding-bottom: 20px;
 }
-.populaires a figure
+.populaires figure 
 {
 	width: auto;
 }
 .hebergements
 {
-	display: flex;
-	flex-direction: column;
 	background-color: unset;
 }
 .hebergements h2 
 {
 	margin-top: 20px;
-    margin-bottom: auto;
+    margin-left: 0;
 }
 .auberge
 {
 	display: flex;
 	flex-direction: column;
 }
-.auberge a 
-{
-	width: auto;
-}
 .auberge figure
 {
-	width: auto;
 	box-shadow: 0px 2px 5px 2px grey;
-	margin-bottom: auto;
-}
-.auberge img 
-{
-	width: 98%;
 }
 .afficher
 {
 	margin-left: -20px;
 }
-.section2
-{
-	width: 100%;
-}
 .section2 h2 
 {
-	margin-left: 30px;
-	margin-bottom: 10px;
+	margin-left: 15px;
 }
 .activites
 {
@@ -710,7 +675,6 @@ span
 }	
 .activites a  
 {
-	width: 85%;
 	height: 235px;
 	margin: 17px;
 	margin-bottom: 0px;
@@ -718,36 +682,20 @@ span
 }
 .activites img 
 {
-    width: 100%;
     height: 186px;
-    margin-top: auto;
-    margin-left: auto;
-}
-.activites figure 
-{
-	margin: 0;
 }
 footer 
 {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	margin: 0;
 	margin-top: 70px;
 	padding-top: 30px;
-}
-footer ul 
-{
-	width: 100%;
 }
 }
 /*media queries tablettes*/
 @media all and (max-width: 1024px)
 {
-header
-{
-	position: relative;
-}
 #logo
 {
 	position: absolute;
@@ -759,10 +707,6 @@ header
 	display: flex;
 	justify-content: center;
 	margin-top: 35px;
-}
-.searchbar
-{
-	width: 100%;
 }
 .filtres li 
 {
@@ -778,7 +722,7 @@ header
 }
 .hebergements h2 
 {
-	margin: 0;
+	margin-left: 0;
 }
 .hotel2
 {
@@ -790,10 +734,6 @@ header
 	grid-template-columns: 1fr 1fr;	
 	padding: 0;
 }
-.auberge a 
-{
-	width: 100%;
-}
 .auberge figcaption figure 
 {
 	width: auto;
@@ -801,6 +741,10 @@ header
 .auberge img 
 {
 	width: 98%;
+}
+.afficher
+{
+	margin-left: -20px;
 }
 .populaires 
 {
@@ -817,18 +761,15 @@ header
 }
 .populaires a 
 {
-	margin-bottom: 45px;
+	margin-bottom: 40px;
 }
 .populaires figure 
 {
-	width: 100%;
 	margin: 0;
     padding: 0;
 }
 .populaires figcaption 
 {
-	width: auto;
-    margin: 0;
     padding-left: 20px;
 }
 .populaires img 
@@ -836,15 +777,11 @@ header
 	width: 100%;
 	padding: 10px 0 10px 0 ;
 }
-.section2
-{
-	width: 100%;
-}	
 .activites
 {
 	grid-template-columns: 50% 50%;
 	grid-template-rows: 400px 400px;
-	grid-row-gap: 45px;
+	grid-row-gap: 40px;
 	grid-column-gap: 20px;
 }
 .activites a 
@@ -854,10 +791,6 @@ header
 .activites figure
 {
 	margin: 0;
-}
-.activites figcaption 
-{
-	margin: auto;
 }
 .activites img 
 {
@@ -905,6 +838,6 @@ footer ul
 }
 footer li 
 {
-	padding: 0;
+	padding-left: 17px;
 }
 }
