commit correctif logo et fonts

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 {
 	font-family: "Raleway";
  	 src:url("fonts/Raleway-Italic-VariableFont_wght");
- 	 src:url("fonts/Raleway-VariableFont_wght");
+ 	 src:url("fonts/Raleway-VariableFont_wght.ttf");
 
 }
 /*corps de page*/
